--- a/atcrowdfunding-main/.settings/org.eclipse.wst.common.component
+++ b/atcrowdfunding-main/.settings/org.eclipse.wst.common.component
@@ -22,7 +22,7 @@
         <dependent-module archiveName="atcrowdfunding-portal-api-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/atcrowdfunding-portal-api/atcrowdfunding-portal-api">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="/"/>
         <property name="java-output-path" value="/atcrowdfunding-main/target/classes"/>
+        <property name="context-root" value="atcrowdfunding-main"/>
     </wb-module>
 </project-modules>
